--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.15.15",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.29.2",
+    "encoding": "^0.1.13",
     "next": "14.1.4",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
