--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@tanstack/react-query": "^5.29.2",
     "encoding": "^0.1.13",
+    "ethers": "^6.11.1",
     "next": "14.1.4",
     "pino-pretty": "^11.0.0",
     "react": "^18",
